[metadata]
name = weirdo
summary = WeIRDO - We Integrate RDO, a wrapper around upstream RDO CI initiatives
description-file =
    README.rst
author = David Moreau Simard
author-email = dms@redhat.com
home-page = https://github.com/dmsimard/weirdo
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/weirdo = ansible.cfg.example
    usr/local/share/weirdo = hosts.example
    usr/local/share/weirdo/playbooks = playbooks/*

[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
